Fix list of servers not having correct styles on small screens

--- a/app/(main)/components/MainNavbar/components/AddServerButton/styles.module.scss
+++ b/app/(main)/components/MainNavbar/components/AddServerButton/styles.module.scss
@@ -3,7 +3,7 @@
 .add-server-button {
   background-color: var(--bg-main);
   border: none;
-  border-radius: calc(var(--br) * 2);
+  border-radius: calc(var(--br) * 3);
   display: flex;
   justify-content: center;
   align-items: center;
